--- a/chatboot/static/css/style.css
+++ b/chatboot/static/css/style.css
@@ -54,13 +54,13 @@ body {
     color: white;
     border: none;
     border-radius: 50%;
-    width: 48px;
-    height: 48px;
+    **width: 40px;**
+    **height: 40px;**
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    font-size: 20px;
+    **font-size: 16px;**
     transition: background-color 0.2s, transform 0.2s;
 }
 #send-btn:hover {
